[metadata]
name = pglifecycle
version = attr: pglifecycle.version
description = A PostgreSQL schema management tool
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/gmr/pglifecycle
project_urls =
    Bug Tracker = https://github.com/gmr/pglifecycle/issues
    Documentation = https://pglifecycle.readthedocs.io
    Source Code = https://github.com/gmr/pglifecycle/
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: SQL
    Topic :: Database
    Topic :: System :: Systems Administration
    Topic :: Software Development
requires-dist = setuptools
keywords =
    postgresql
    ddl
    sql
    schema

[options]
include_package_data = True
install_requires =
    pgdumplib
    pyyaml
packages = pglifecycle
zip_safe = True

[options.package_data]
* = LICENSE, README.rst

[build_sphinx]
all-files = 1

[coverage:run]
branch = True
data_file = build/.coverage

[flake8]
application-import-names = pglifecycle
exclude = build,env
ignore = RST304,W504
import-order-style = google

[mypy-arrow]
ignore_missing_imports = True

[nosetests]
cover-branches = 1
cover-html = true
cover-html-dir = build/coverage
cover-package = pglifecycle
cover-xml = true
cover-xml-file = build/coverage.xml
logging-level = DEBUG
verbosity = 2
with-coverage = 1
with-xunit = true
xunit-file = build/nosetests.xml
